[project]
name = "hw-lesson-16"
version = "0.1.0"
description = "test"
authors = [
    {name = "Rostislav Ivanov",email = "x1qeee25@gmail.com"}
]
readme = "README.md"
requires-python = "3.10"
dependencies = [
    "selene (==2.0.0rc9)",
    "pytest (>=8.3.5,<9.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pylint = "^3.3.6"

